crates/shep-cli/src/lookout/frames/snapshots/shep__lookout__frames__tests__close_dialog_floor.snap
---
source: crates/shep-cli/src/lookout/frames/mod.rs
assertion_line: 3699
expression: render_text(&buffer)
---
shep lookout   /home/ada/.shep                                              6 in the flock
                                                                                          
 ██ api  (sheep config)  2 edits                                                          
   process   logging   inputs   restart   readiness   shutdown   watch   cron     tab nex…
  ────────────────────────────────────────────────────────────────────────────────────────
  FIELD                       VALUE                                                       
>  err_file                   (unset) -… FOCUSED  err_file  text                          
 ~ level_rules                []          Where stderr goes. Written out, the default is  
   log_timestamps             true        {{SHEP_HOME}}/logs/{{name}}-{{instance}}-err.log
   merge_logs                 false                                                       
   out_file                   (unset)     now     (unset)                                 
                                          default (none)                                  
  pending edits                           example {{SHEP_HOME}}/logs/{{name}}-{{instance}…
    cwd  (unset) -> /srv/api                                                              
    err_file  (unset) -> /var/log/api…    ▲ respawn  the sheep must stop and start again  
                                                   pick the timing when you close the pane
  env                                                                                     
   DATABASE_URL               (set)       ────────────────────────────────────────────────
   NODE_ENV                   (set)       VALIDATION                                      
 ▛▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▜ 
 ▐  2 EDITS NEED A RESPAWN, 1 FIELD ALREADY DID api is online, pid 48219                ▌…
 ▐  cwd and err_file take hold when the process starts again.                           ▌ 
 ▐                                                                                      ▌ 
 ▐  R   restart now      stop, then start. The stop takes up to 1600ms.                 ▌…
 ▐  L   reload           the replacement starts alongside and takes over. No gap, if the▌ 
 ▐                       app sets SO_REUSEPORT itself.                                  ▌ 
 ▐  c   continue         write them and leave it running. They wait for a respawn.      ▌ 
 ▐                                                                                      ▌…
 ▐  esc  keep editing, write nothing   ·   this prompt expires in 10s ██████████        ▌─
 ▙▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▟…
                                                                                          
                                                                                          
                                                                                          
                                                                                          
                                                                                          
                                                                                          
                                                                                          
                                                                                          
                                                                                          
                                                                                          
                                                                                          
                                                                                          
                                                                                          
                                                                                          
                                                                                          
                                                                                          
                                                                                          
the dialog owns the keyboard until it is answered or it expires            control enabled
